Treat relatively positioned elements at original position for flowing around floats.  b=205087  r+sr=bzbarsky